--- a/main.html
+++ b/main.html
@@ -7,8 +7,48 @@
 </head>
 
 <body>
-	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
+	
+	<header> 
+		<h1>Jab we met</h1>
+	</header>
+	<nav>
+		<ul>
+			<li><a id="nav-actor" href="#actor">Actors</a></li>
+		    <li><a id="nav-quote" href="#quote">Quotes</a></li>
+		</ul>
+	</nav>
+		
+	<summary>Aditya, a heartbroken business tycoon, aimlessly boards a 
+			train to escape his depressing life. He meets Geet, a bubbly <br> Punjabi girl, 
+			and gets pulled into her crazy life.
+	</summary>
+	<section id="actor">
+		<p>
+			Shahid Kapoor <br>
+			Kareena Kapoor <br>
+			Tarun Arora <br>
+			Saumya Tandon <br>
+			Dara Singh <br>
+
+		</p>
+			
+	</section>
+	<section id="quote">
+		<p>
+			Sikhni hoon main… Bhatinda ki! <br>
+			Mein apni favourite hoon! <br>
+			Akeli ladki khuli tijori ki tarah hoti hai… <br>
+			Jab koi pyaar mein hota hai, tab koi sahi galat nahi hota… <br>
+			Tumhe uthakar museum mein rakhna chahiye… ticket lagni chahiye tumhe dekhne ke liye <br>
+		</p>
+	</section>
+	<aside> 
+		<p>7.9 / 10 on imDb <br> Released in 2007 </p>
+			
+	</aside>
+	<footer id="footer">Produced by: &lt Imtiaz Ali &gt</footer>
+		
+	<script type="text/javascript" src="./script.js">
 </script>
 
 </body>
