--- a/main.html
+++ b/main.html
@@ -11,12 +11,10 @@
 	<header> 
 		<h1>Jab we met</h1>
 	</header>
-	<nav>
-		<ul>
-			<li><a id="nav-actor" href="#actor">Actors</a></li>
-		    <li><a id="nav-quote" href="#quote">Quotes</a></li>
-		</ul>
-	</nav>
+	<Nav>
+		<a id="nav-actor" href="#actor">Actors</a>
+		<a id="nav-quote" href="#quote">Quotes</a>
+	</Nav>
 		
 	<summary>Aditya, a heartbroken business tycoon, aimlessly boards a 
 			train to escape his depressing life. He meets Geet, a bubbly <br> Punjabi girl, 
